# Head-Unit

./: HU.sh  README.md
Head_Unit_app/: AppWidget.qml  CMakeLists.txt  CMakeLists.txt.user.2def1dd  CarWidget.qml  DistanceImageSet.qml  DrivingModeApplication.qml  GearBox.qml  GearBoxWindow.qml  GearText.qml  GearWidget.qml  HomeWidget.qml  InfoWidget.qml  MapApplication.qml  MapWidget.qml  MenuButton.qml  MenuWindow.qml  MusicApplication.qml  ParkingWindow.qml  StartScreen.qml  TopBar.qml  VideoApplication.qml  VideoApplication_ver2.qml  VideoObject.qml  WeatherApplication.qml  battery.cpp  battery.h  carInfoController.cpp  carInfoController.h  current_clock.h  extract_cover.py  gearController.h  main.cpp  main.qml  mapController.cpp  mapController.h  mp3player.cpp  mp3player.h  qml.qrc  resource.qrc  usbscanner.cpp  (+5 more)
build-Head_Unit_app-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Head_Unit_app.cbp  build.ninja  cmake_install.cmake  rules.ninja
build-Head_Unit_app-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-035291aa65eb98f8ce5d.json  cmakeFiles-v1-1c10473893dea913c842.json  codemodel-v2-e23a875c67cd9f358a67.json  index-2025-02-12T12-18-47-0888.json  target-Head_Unit_app-Debug-9ecd642301a721556d4e.json  target-Head_Unit_app_autogen-Debug-8af120edf1563abe0161.json  target-IC_someip-someip-Debug-1fe5be9242894c171126.json  target-IC_someip-someip_autogen-Debug-df3827b4269dd796e833.json
build-Head_Unit_app-Desktop-Debug/Head_Unit_app_autogen/: moc_predefs.h  mocs_compilation.cpp
build-Head_Unit_app-Desktop-Debug/Head_Unit_app_autogen/EWIEGA46WW/: moc_battery.cpp  moc_carInfoController.cpp  moc_current_clock.cpp  moc_gearController.cpp  moc_mapController.cpp  moc_mp3player.cpp  moc_usbscanner.cpp  moc_weather.cpp  moc_youtubeController.cpp  qrc_qml.cpp
build-Head_Unit_app-Desktop-Debug/IC_someip-someip_autogen/: moc_predefs.h
cgen/commonapi_core_generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
cgen/commonapi_core_generator/configuration/org.eclipse.osgi/: framework.info.14  framework.info.15
cgen/commonapi_core_generator/configuration/org.eclipse.osgi/.manager/: .fileTable.14  .fileTable.15  .fileTable.16
cgen/commonapi_dbus_generator/: artifacts.xml
cgen/commonapi_dbus_generator/commonapi-dbus-generator.app/Contents/: Info.plist
cgen/commonapi_dbus_generator/configuration/: config.ini
cgen/commonapi_dbus_generator/configuration/org.eclipse.update/: platform.xml
cgen/commonapi_dbus_generator/features/org.genivi.commonapi.dbus.cli.feature_3.2.14.v202310241612/: feature.xml
cgen/commonapi_someip_generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
cgen/commonapi_someip_generator/configuration/org.eclipse.osgi/: framework.info.16  framework.info.17
cgen/commonapi_someip_generator/configuration/org.eclipse.osgi/.manager/: .fileTable.16  .fileTable.17  .fileTable.18
fidl/: IC.fdepl  IC.fidl
json/: HU.json
